[project]
name = "gausstorch"
version = "1.0"
authors = [
    { name = "Julien Dudas", email = "juliendudas@gmail.com" }
]
description = "Package allowing the simulation of coupled bosonic gaussian modes, with PyTorch"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


